<resources>
    <string name="app_name">WeatherData</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="weather_data">Weather Data</string>
    <string name="weather_details">Weather Details</string>
    <string name="search_city_or_location">Search for a city or location</string>
    <string name="alert_permission_denied">Permission denied</string>
    <string name="precipitation">Precipitation</string>
    <string name="precipintensity">Precip.Intensity</string>
    <string name="cloud_cover">Cloud cover</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind</string>
    <string name="gust">Gust</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="alert_no_internet">No internet connection!! Please try again!</string>
    <string name="alert_error">Something went wrong! Please try again later</string>

    <string-array name="city_array">
        <item>@string/new_york</item>
        <item>@string/la</item>
        <item>@string/chicago</item>
        <item>@string/houston</item>
        <item>@string/sfo</item>
        <item>@string/atlanta</item>
        <item>@string/boston</item>
        </string-array>

    <string name="new_york">New York</string>
    <string name="boston">Boston</string>
    <string name="la">Los Angeles</string>
    <string name="chicago">Chicago</string>
    <string name="houston">Houston</string>
    <string name="sfo">San Francisco</string>
    <string name="atlanta">Atlanta</string>


</resources>