<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.mvvm.weather.presentation.model.DisplayableWeatherData.DisplayableData" />

        <import type="android.view.View" />

        <variable
            name="weather"
            type="DisplayableData" />

        <variable
            name="image"
            type="int" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/fab_margin"
        tools:context=".presentation.WeatherFragment">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/standard_margin"
            android:fontFamily="@font/font_semibold"
            android:text="@{weather.time}"
            android:textColor="@color/dark_gray"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Monday, 01/09" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/font_semibold"
            android:text="@{weather.temperature}"
            android:textColor="@color/purple_blue"
            android:textSize="22sp"
            app:layout_constraintEnd_toStartOf="@+id/icon_day"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_day"
            tools:text="55F" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icon_day"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="@dimen/large_margin"
            android:scaleType="fitXY"
            app:imageResource="@{weather.icon}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_day"
            app:srcCompat="@drawable/ic_weather_rain" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/large_margin"
            android:layout_marginEnd="@dimen/standard_margin"
            android:fontFamily="@font/font_medium"
            android:text="@{weather.summary}"
            android:textColor="@color/dark_gray"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon_day"
            tools:text="Possible drizzle in the morning" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:fontFamily="@font/font_medium"
            android:text="@string/precipitation"
            android:textAllCaps="true"
            android:textColor="@color/purple_blue"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="@+id/tv_summary"
            app:layout_constraintTop_toBottomOf="@+id/tv_summary"
            tools:text="Precipitation" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_precipitation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15"
            android:fontFamily="@font/font_medium"
            android:text="@string/precipitation"
            android:textAllCaps="true"
            android:textColor="@color/dark_gray"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/tv_header"
            app:layout_constraintTop_toBottomOf="@+id/tv_header"
            tools:text="Precipitation" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_precipitation_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_medium"
            android:text="@{weather.precipProbability}"
            android:textAllCaps="true"
            android:textColor="@color/dark_gray"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_summary"
            app:layout_constraintTop_toTopOf="@+id/tv_precipitation"
            tools:text="45" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_intensity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15"
            android:fontFamily="@font/font_medium"
            android:text="@string/precipintensity"
            android:textAllCaps="true"
            android:textColor="@color/dark_gray"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/tv_precipitation"
            app:layout_constraintTop_toBottomOf="@+id/tv_precipitation"
            tools:text="Precip.Intensity" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_intensity_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_medium"
            android:text="@{weather.precipIntensity}"
            android:textAllCaps="true"
            android:textColor="@color/dark_gray"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_precipitation_value"
            app:layout_constraintTop_toTopOf="@+id/tv_intensity"
            tools:text="52" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_cloud_cover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15"
            android:fontFamily="@font/font_medium"
            android:text="@string/cloud_cover"
            android:textAllCaps="true"
            android:textColor="@color/dark_gray"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/tv_intensity"
            app:layout_constraintTop_toBottomOf="@+id/tv_intensity"
            tools:text="Cloud cover" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_cloud_cover_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_medium"
            android:text="@{weather.cloudCover}"
            android:textAllCaps="true"
            android:textColor="@color/dark_gray"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_intensity_value"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/tv_cloud_cover"
            app:layout_constraintTop_toTopOf="@+id/tv_cloud_cover"
            tools:text="97" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15"
            android:fontFamily="@font/font_medium"
            android:text="@string/pressure"
            android:textAllCaps="true"
            android:textColor="@color/dark_gray"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/tv_cloud_cover"
            app:layout_constraintTop_toBottomOf="@+id/tv_cloud_cover"
            tools:text="Pressure" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_pressure_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_medium"
            android:text="@{weather.pressure}"
            android:textAllCaps="true"
            android:textColor="@color/dark_gray"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_cloud_cover_value"
            app:layout_constraintTop_toTopOf="@+id/tv_pressure"
            tools:text="97" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_header_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15"
            android:fontFamily="@font/font_medium"
            android:text="@string/wind"
            android:textAllCaps="true"
            android:textColor="@color/purple_blue"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="@+id/tv_pressure"
            app:layout_constraintTop_toBottomOf="@+id/tv_pressure"
            tools:text="Wind" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15"
            android:fontFamily="@font/font_medium"
            android:text="@string/wind"
            android:textAllCaps="true"
            android:textColor="@color/dark_gray"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/tv_header_2"
            app:layout_constraintTop_toBottomOf="@+id/tv_header_2"
            tools:text="wind" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_wind_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_medium"
            android:text="@{weather.windSpeed}"
            android:textAllCaps="true"
            android:textColor="@color/dark_gray"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_pressure_value"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@+id/tv_wind"
            app:layout_constraintTop_toTopOf="@+id/tv_wind"
            tools:text="97" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_gust"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15"
            android:fontFamily="@font/font_medium"
            android:text="@string/gust"
            android:textAllCaps="true"
            android:textColor="@color/dark_gray"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/tv_wind"
            app:layout_constraintTop_toBottomOf="@+id/tv_wind"
            tools:text="gust" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_gust_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_medium"
            android:text="@{weather.gusts}"
            android:textAllCaps="true"
            android:textColor="@color/dark_gray"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_wind_value"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@+id/tv_gust"
            app:layout_constraintTop_toTopOf="@+id/tv_gust"
            tools:text="78" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_sunrise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:fontFamily="@font/font_medium"
            android:text="@string/sunrise"
            android:textAllCaps="true"
            android:textColor="@color/dark_gray"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/tv_gust"
            app:layout_constraintTop_toBottomOf="@+id/tv_gust"
            tools:text="surise" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_sunrise_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_medium"
            android:text="@{weather.sunrise}"
            android:textAllCaps="true"
            android:textColor="@color/dark_gray"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_gust_value"
            app:layout_constraintHorizontal_bias="0.996"
            app:layout_constraintStart_toEndOf="@+id/tv_sunrise"
            app:layout_constraintTop_toTopOf="@+id/tv_sunrise"
            tools:text="78" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_sunset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15"
            android:fontFamily="@font/font_medium"
            android:text="@string/sunset"
            android:textAllCaps="true"
            android:textColor="@color/dark_gray"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/tv_sunrise"
            app:layout_constraintTop_toBottomOf="@+id/tv_sunrise"
            tools:text="sunset" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_sunset_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_medium"
            android:text="@{weather.sunset}"
            android:textAllCaps="true"
            android:textColor="@color/dark_gray"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_sunrise_value"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/tv_sunset"
            app:layout_constraintTop_toTopOf="@+id/tv_sunset"
            tools:text="78" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>